--- a/docker-compose.yaml
+++ b/docker-compose.yaml
@@ -59,6 +59,8 @@ services:
     ports:
       - 3306:3306
     container_name: mysql
+    environment:
+      MYSQL_ROOT_PASSWORD: root
     networks:
       - ajk
 
